Stylesheet/emote/tag updates 2013-06-17

--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -399,15 +399,25 @@ a[href|="/vrcrazy"]{background-position: -240px -750px; width: 70px; height: 70p
 a[href|="/lplie"]{background-position: -240px -870px; width: 100px; height: 100px; }
 
 
-a[href|="/velvetfilly"]
+a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em6-v01%%);
+background-image: url(%%foe-em6-v03%%);
 }
-a[href|="/velvetfilly"]{background-position: -0px -0px; width: 91px; height: 130px; }
+a[href|="/bjdrunk"]{background-position: 0 0; width: 119px; height: 77px; }
+a[href|="/bjpounce"]{ background-position: 0 -127px; width: 150px; height: 79px; }
+a[href|="/bjsearch"]{ background-position: 0 -256px; width: 150px; height: 96px; } 
+a[href|="/bjseriously"]{ background-position: 0 -402px; width: 150px; height: 136px; }
+a[href|="/bjsmile"]{ background-position: 0 -588px; width: 95px; height: 150px; }
+a[href|="/lpblush"]{ background-position: 0 -788px; width: 64px; height: 100px; }
+a[href|="/velvetfilly"]{ background-position: 0 -938px; width: 91px; height: 130px; }
+a[href|="/glimmergrin"]{ background-position: 0 -1118px; width: 52px; height: 100px; } 
+a[href|="/murkybsod"]{ background-position: 0 -1268px; width: 84px; height: 100px; } 
+a[href|="/murkyhappy"]{ background-position: 0 -1418px; width: 81px; height: 100px; } 
+a[href|="/murkyplease"]{ background-position: 0 -1568px; width: 150px; height: 121px; } 
 
 
 a[href|="/advicebj"]
