--- a/source-css/flutquisition.css
+++ b/source-css/flutquisition.css
@@ -170,7 +170,55 @@ a[href|="/rarisquee"] {
     display: block;
     clear: none;
     float: left;
-    width: 126px;
-    height: 150px;
+    width: 150px;
+    height: 126px;
     background-image:url(%%rarisquee%%)
+}
+a[href|="/changelingshyhug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 132px;
+    height: 150px;
+    background-image:url(%%Changeling-hug%%)
+}
+a[href|="/dresshy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 209px;
+    height: 150px;
+    background-image:url(%%dresshy%%)
+}
+a[href|="/kittyforyou"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 171px;
+    height: 150px;
+    background-image:url(%%flutterforyou%%)
+}
+a[href|="/hoodshy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 162px;
+    height: 150px;
+    background-image:url(%%hoodieshy%%)
+}
+a[href|="/parashy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 102px;
+    background-image:url(%%Parashy%%)
+}
+a[href|="/shyprisehug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 190px;
+    height: 150px;
+    background-image:url(%%Shyprisehug%%)
 }
