--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -718,7 +718,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href|="http://fav.me/d64zrgu"] {
+.side a[href|="http://fav.me/d5y60lt"] {
    display: block;
    height: 120px;
    width: 120px;
