--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -217,3 +217,13 @@ a[href|="/swordbee"] {
     background-repeat: no-repeat;
     background-image: url(%%swordbee%%)
     }
+
+a[href|="/swordtux"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 174px;
+    background-repeat: no-repeat;
+    background-image: url(%%swordtux%%)
+    }
