--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1175,7 +1175,8 @@ a[href|="/indignanttwilight"],
 a[href|="/indignantcadance"],
 a[href|="/indignantcelestia"],
 a[href|="/indignantluna"],
-a[href|="/fascinating"]
+a[href|="/fascinating"],
+a[href|="/honesty"]
 {
     display: block;
     clear: none;
@@ -1258,6 +1259,11 @@ a[href|="/fascinating"]
 {
 	width: 91px;
 	background-position: -361px -420px;
+}
+a[href|="/honesty"]
+{
+	width: 198px;
+	background-position: -0px -560px;
 }
 /* end sheet 8 */
 
@@ -1682,6 +1688,7 @@ a[href|="/bpcoffee"],
 a[href|="/bppursuitofhappiness"],
 a[href|="/bpwinehat"],
 a[href|="/twilicorndafuq"],
+a[href|="/sacreblueshift"],
 a[href|="/woonalove"]
 {
     display: block;
@@ -1771,4 +1778,25 @@ a[href|="/woonalove"]
 	width: 106px;
 	background-position: -259px -840px;
 }
+a[href|="/sacreblueshift"]
+{
+	width: 156px;
+	background-position: -0px -1040px;
+}
 /* end sheet 12 */
+/* sheet 13 */
+a[href|="/twilightstrapkle"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 200px;
+    background-image: url(%%sheet13%%)
+}
+a[href|="/twilightstrapkle"]
+{
+	width: 199px;
+	background-position: -0px -0px;
+}
+/* end sheet 13 */
+
