--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -5,9 +5,13 @@ html {
 body {   
     background:#F6F9FC;  
     font-family:sans-serif !important;
-}  
-h2 {  
+} 
+.titlebox h1 a {
     color:#0077BB !important;  
+    font-size:18px; 
+}
+h2 {  
+    color:#000 !important;  
     font-size:18px; 
 }
 h4 {
