--- a/source-css/mylittlemotorhead.css
+++ b/source-css/mylittlemotorhead.css
@@ -752,6 +752,17 @@ a[href|="/f20"] {
 a[href|="/f20"] {
     background-position: -0px -0px
     }
+a[href|="/scootabike"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 145px;
+    height: 221px;
+    background-image: url(%%scootabike%%)
+    }
+a[href|="/scootabike"] {
+    background-position: -0px -0px
+    }
 /**********************
 *
 *    OTHER EMOTE STUFF
