--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -109,7 +109,7 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
  display:inline-block;
  float:left;
  overflow:auto;
- margin-top: -3px
+ margin-top: 0px
 }
 
 .titlebox .usertext-body .md ol li strong{font-size:12px;color:#EF4F91}
@@ -118,10 +118,10 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%rd-hat%%);
- width:67px;
- height:63px;
- margin-top:-35px;
+ background:url(%%roseluck-hat%%);
+ width:70px;
+ height:62px;
+ margin-top:-37px;
  margin-left:1px;
  margin-bottom:0px;
  margin-right:-40px;
@@ -449,10 +449,10 @@ a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%swagintosh-sheet%%)!important}
 
 a[href|="/flutterfear"],a[href|="/b00"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rarityyell"],a[href|="/b20"],a[href|="/fluttershy"],a[href|="/b30"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/eeyup"],a[href|="/b21"],a[href|="/rdsmile"],a[href|="/b31"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/takealetter"],a[href|="/b22"],a[href|="/rdwut"],a[href|="/b32"],a[href|="/ppshrug"],a[href|="/b03"],a[href|="/spikenervous"],a[href|="/newrainbowdash"],a[href|="/b13"],a[href|="/noooo"],a[href|="/b23"],a[href|="/dj"],a[href|="/threedog"],a[href|="/b33"],a[href|="/fluttershh"],a[href|="/b04"],a[href|="/flutteryay"],a[href|="/b14"],a[href|="/squintyjack"],a[href|="/b24"],a[href|="/spikepushy"],a[href|="/b34"],a[href|="/ajugh"],a[href|="/b05"],a[href|="/raritywut"],a[href|="/b15"],a[href|="/dumbfabric"],a[href|="/b25"],a[href|="/raritywhy"],a[href|="/b35"],a[href|="/trixiesmug"],a[href|="/b06"],a[href|="/flutterwink"],a[href|="/b16"],a[href|="/rarityannoyed"],a[href|="/b26"],a[href|="/soawesome"],a[href|="/b36"],a[href|="/ajwut"],a[href|="/b07"],a[href|="/twisquint"],a[href|="/b17"],a[href|="/raritywhine"],a[href|="/b27"],a[href|="/rdcool"],a[href|="/b37"],a[href|="/abwut"],a[href|="/b08"],a[href|="/manspike"],a[href|="/b18"],a[href|="/cockatrice"],a[href|="/b28"],a[href|="/facehoof"],a[href|="/b38"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rarityprimp"],a[href|="/b19"],a[href|="/twirage"],a[href|="/b29"],a[href|="/ppseesyou"],a[href|="/b39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-WAYBETTERVERSION%%)!important}
 
 a[href|="/rflutterfear"],a[href|="/rb00"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rfluttershy"],a[href|="/rb30"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/reeyup"],a[href|="/rb21"],a[href|="/rrdsmile"],a[href|="/rb31"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/rrdwut"],a[href|="/rb32"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rb13"],a[href|="/rnoooo"],a[href|="/rb23"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rb33"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/rflutteryay"],a[href|="/rb14"],a[href|="/rsquintyjack"],a[href|="/rb24"],a[href|="/rspikepushy"],a[href|="/rb34"],a[href|="/rajugh"],a[href|="/rb05"],a[href|="/rraritywut"],a[href|="/rb15"],a[href|="/rdumbfabric"],a[href|="/rb25"],a[href|="/rraritywhy"],a[href|="/rb35"],a[href|="/rtrixiesmug"],a[href|="/rb06"],a[href|="/rflutterwink"],a[href|="/rb16"],a[href|="/rrarityannoyed"],a[href|="/rb26"],a[href|="/rsoawesome"],a[href|="/rb36"],a[href|="/rajwut"],a[href|="/rb07"],a[href|="/rtwisquint"],a[href|="/rb17"],a[href|="/rraritywhine"],a[href|="/rb27"],a[href|="/rrdcool"],a[href|="/rb37"],a[href|="/rabwut"],a[href|="/rb08"],a[href|="/rmanspike"],a[href|="/rb18"],a[href|="/rcockatrice"],a[href|="/rb28"],a[href|="/rfacehoof"],a[href|="/rb38"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/rtwirage"],a[href|="/rb29"],a[href|="/rppseesyou"],a[href|="/rb39"]
-{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-flipped%%)!important}
+{display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%bmotes-flipped-WAYBETTERVERSION%%)!important}
 
 a[href|="/rdsitting"],a[href|="/c00"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rdannoyed"],a[href|="/c20"],a[href|="/trixiesad"],a[href|="/c30"],a[href|="/twismug"],a[href|="/c01"],a[href|="/twismile"],a[href|="/c11"],a[href|="/twistare"],a[href|="/c21"],a[href|="/changeling"],a[href|="/c31"],a[href|="/ohhi"],a[href|="/c02"],a[href|="/party"],a[href|="/c12"],a[href|="/hahaha"],a[href|="/c22"],a[href|="/rdscared"],a[href|="/c32"],a[href|="/flutterblush"],a[href|="/c03"],a[href|="/gross"],a[href|="/c13"],a[href|="/derpyhappy"],a[href|="/c23"],a[href|="/twidaw"],a[href|="/c33"],a[href|="/ajfrown"],a[href|="/c04"],a[href|="/hmmm"],a[href|="/c14"],a[href|="/joy"],a[href|="/c24"],a[href|="/whattheflut"],a[href|="/c34"],a[href|="/raritysad"],a[href|="/c05"],a[href|="/fabulous"],a[href|="/c15"],a[href|="/derp"],a[href|="/c25"],a[href|="/louder"],a[href|="/c06"],a[href|="/lunasad"],a[href|="/c16"],a[href|="/derpyshock"],a[href|="/c26"],a[href|="/pinkamina"],a[href|="/c07"],a[href|="/loveme"],a[href|="/c17"],a[href|="/lunagasp"],a[href|="/c27"],a[href|="/scootaloo"],a[href|="/c08"],a[href|="/celestia"],a[href|="/c18"],a[href|="/angel"],a[href|="/c28"],a[href|="/allmybits"],a[href|="/c09"],a[href|="/zecora"],a[href|="/c19"],a[href|="/photofinish"],a[href|="/c29"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%cmotes%%)!important}
@@ -674,7 +674,7 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .side .md table:nth-of-type(1) th:nth-of-type(1):after {content:"a";}
 .side .md table:nth-of-type(1) tr:nth-of-type(odd) td + td:after {background-image:url(%%amotes%%);}
 .side .md table:nth-of-type(2) th:nth-of-type(1):after {content:"b";}
-.side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes%%);}
+.side .md table:nth-of-type(2) tr:nth-of-type(odd) td + td:after {background-image:url(%%bmotes-WAYBETTERVERSION%%);}
 .side .md table:nth-of-type(3) th:nth-of-type(1):after {content:"c";}
 .side .md table:nth-of-type(3) tr:nth-of-type(odd) td + td:after {background-image:url(%%cmotes%%);}
 .side .md table:nth-of-type(4) th:nth-of-type(1):after {content:"e";}
