--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -583,6 +583,23 @@ a.author[href$="Phei"]:after {
     display: block;
     letter-spacing: normal;
     }
+
+#siteTable_t3_1g8vw9 a.author {
+    font-size: 0px !important;
+    display: inline-block;
+    vertical-align: bottom;
+    overflow: hidden;
+    letter-spacing: -20px;
+    }
+
+#siteTable_t3_1g8vw9 a.author:after {
+    content: "redpoemage";
+    font-size: 10px !important;
+    visibility: visible !important; 
+    display: block;
+    letter-spacing: normal;
+    }
+
 /* Pretzels */
 /* 
 #siteTable_t3_11f1rk a.author {
